# LAB-7

./: CMakeLists.txt  LAB 7.sln  flake.nix
LAB 7/: LAB 7.vcxproj  LAB 7.vcxproj.filters  Objects.cpp  Objects.h  main.cpp
